--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-	compile group: 'org.apache.spark', name: 'spark-core_2.11', version: '1.4.0'
+
+	compile group: 'org.apache.spark', name: 'spark-core_2.10', version: '2.0.0'
+	compile group: 'org.apache.spark', name: 'spark-streaming_2.10', version: '2.0.0'
+	compile group: 'org.apache.spark', name: 'spark-streaming-mqtt_2.10', version: '1.6.2'
+	compile group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.1.0'
+	
 	compile "org.slf4j:slf4j-log4j12:1.6.6"
 }
